# atc-haskell-projects

./: README copy.md  README.md  default.nix  shell.nix  tasks.txt  tic-tac-toe.cabal  todo-manager.cabal
src/: Main.hs
tic-tac-toe-cli/: CHANGELOG.md  README.md  package.yaml  tic-tac-toe-cli.cabal
tic-tac-toe-cli/app/: Main.hs
tic-tac-toe-cli/src/: Game.hs  UI.hs
