-- tic-tac-toe.cabal
name:                tic-tac-toe
version:             0.1.0.0
description:         A game of tic-tac-toe
category:            CLI
build-type:          Simple
cabal-version:       >=1.10

executable tic-tac-toe
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
