-- todo-manager.cabal
name:                todo-manager
version:             0.1.0.0
description:         A simple todo manager
category:            CLI
build-type:          Simple
cabal-version:       >=1.10

executable todo-manager
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
